--- a/.gitattributes
+++ b/.gitattributes
@@ -2,10 +2,12 @@
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
 
 # Ignore all test and documentation with "export-ignore".
-/.editorconfig      export-ignore
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
-/phpcs.xml          export-ignore
-/phpunit.xml.dist   export-ignore
-/tests              export-ignore
-/docker             export-ignore
+/.editorconfig          export-ignore
+/.gitattributes         export-ignore
+/.gitignore             export-ignore
+/.php_cs.common.php     export-ignore
+/.php_cs.dist           export-ignore
+/phpcs.xml              export-ignore
+/phpunit.xml.dist       export-ignore
+/tests                  export-ignore
+/docker                 export-ignore
