--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,10 @@
 name: Run tests
 
-on: [ push, pull_request ]
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   test:
@@ -13,6 +17,9 @@ jobs:
         laravel: [ 8.*, 7.*, 6.*, 5.8.* ]
         stability: [ prefer-stable ]
         include:
+          - laravel: 8.*
+            php: 8.1
+            stability: prefer-stable
           - laravel: 8.*
             php: 8.0
             stability: prefer-stable
