--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,8 +17,8 @@ jobs:
         laravel: [ 8.*, 7.*, 6.*, 5.8.* ]
         stability: [ prefer-stable ]
         include:
-          - laravel: 8.*
-            php: 8.1
+          - laravel: 9.*
+            php: 8.0
             stability: prefer-stable
           - laravel: 8.*
             php: 8.0
@@ -28,6 +28,12 @@ jobs:
             stability: prefer-stable
           - laravel: 6.*
             php: 8.0
+            stability: prefer-stable
+          - laravel: 9.*
+            php: 8.1
+            stability: prefer-stable
+          - laravel: 8.*
+            php: 8.1
             stability: prefer-stable
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
