--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0|^7.0",
         "squizlabs/php_codesniffer": "^3.5",
 		"mockery/mockery": "^1.0",
-		"friendsofphp/php-cs-fixer": "^2.17"
+		"friendsofphp/php-cs-fixer": "^2.17|^3.0"
     },
 	"autoload": {
 		"psr-4": {
