--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,11 +29,17 @@ jobs:
           - laravel: 6.*
             php: 8.0
             stability: prefer-stable
+          - laravel: 10.*
+            php: 8.1
+            stability: prefer-stable
           - laravel: 9.*
             php: 8.1
             stability: prefer-stable
           - laravel: 8.*
             php: 8.1
+            stability: prefer-stable
+          - laravel: 10.*
+            php: 8.2
             stability: prefer-stable
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
