--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
 	],
 	"require": {
 		"php": ">=7.1.3",
-		"illuminate/support": "^5.8|^6.0|^7.0|^8.0|^9.0",
+		"illuminate/support": "^5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
         "spatie/laravel-http-logger": "^1.0",
         "ext-json": "*"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0|^7.0",
+        "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0|^7.0|^8.0",
         "squizlabs/php_codesniffer": "^3.5",
 		"mockery/mockery": "^1.0",
 		"friendsofphp/php-cs-fixer": "^2.17|^3.0"
