--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,28 +3,29 @@
          xsi:noNamespaceSchemaLocation="./vendor/phpunit/phpunit/phpunit.xsd"
          bootstrap="vendor/autoload.php"
          colors="true"
-         stderr="true"
->
+         stderr="true">
+    <coverage>
+        <include>
+            <directory suffix=".php">src/</directory>
+        </include>
+        <report>
+            <clover outputFile="build/logs/clover.xml"/>
+            <html outputDirectory="build/coverage"/>
+            <text outputFile="build/coverage.txt"/>
+        </report>
+    </coverage>
     <testsuites>
         <testsuite name="Test Suite">
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
-<!--    <coverage processUncoveredFiles="true">-->
-<!--        <include>-->
-<!--            <directory suffix=".php">./src</directory>-->
-<!--        </include>-->
-<!--    </coverage>-->
-    <filter>
-        <whitelist>
-            <directory suffix=".php">src/</directory>
-        </whitelist>
-    </filter>
+    <!--    <coverage processUncoveredFiles="true">-->
+    <!--        <include>-->
+    <!--            <directory suffix=".php">./src</directory>-->
+    <!--        </include>-->
+    <!--    </coverage>-->
     <logging>
-        <log type="junit" target="build/report.junit.xml"/>
-        <log type="coverage-html" target="build/coverage"/>
-        <log type="coverage-text" target="build/coverage.txt"/>
-        <log type="coverage-clover" target="build/logs/clover.xml"/>
+        <junit outputFile="build/report.junit.xml"/>
     </logging>
     <php>
         <server name="DB_CONNECTION" value="sqlite"/>
