--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,9 @@ jobs:
           - laravel: 10.*
             php: 8.2
             stability: prefer-stable
+          - laravel: 11.*
+            php: 8.3
+            stability: prefer-stable
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
