--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,50 @@
 {
-	"name": "kitloong/laravel-app-logger",
-	"description": "Laravel log for your application",
-	"keywords": ["laravel", "log", "query", "request", "performance"],
+    "name": "kitloong/laravel-app-logger",
+    "description": "Laravel log for your application",
+    "keywords": [
+        "laravel",
+        "log",
+        "query",
+        "request",
+        "performance"
+    ],
     "homepage": "https://github.com/kitloong/laravel-app-logger",
-	"license": "MIT",
-	"authors": [
-		{
-			"name": "Kit Loong",
-			"email": "kitloong1008@gmail.com"
-		}
-	],
-	"require": {
-		"php": ">=7.1.3",
-		"illuminate/support": "^5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Kit Loong",
+            "email": "kitloong1008@gmail.com"
+        }
+    ],
+    "require": {
+        "php": ">=7.1.3",
+        "illuminate/support": "^5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
         "spatie/laravel-http-logger": "^1.0",
         "ext-json": "*"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0|^7.0|^8.0",
+        "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0|^7.0|^8.0|^9.0",
         "squizlabs/php_codesniffer": "^3.5",
-		"mockery/mockery": "^1.0",
-		"friendsofphp/php-cs-fixer": "^2.17|^3.0"
+        "mockery/mockery": "^1.0",
+        "friendsofphp/php-cs-fixer": "^2.17|^3.0"
     },
-	"autoload": {
-		"psr-4": {
+    "autoload": {
+        "psr-4": {
             "KitLoong\\AppLogger\\": "src"
-		}
-	},
-	"autoload-dev": {
-		"psr-4": {
-			"KitLoong\\AppLogger\\Tests\\": "tests/"
-		}
-	},
-	"extra": {
-		"laravel": {
-			"providers": [
-				"KitLoong\\AppLogger\\AppLoggerServiceProvider"
-			]
-		}
-	},
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "KitLoong\\AppLogger\\Tests\\": "tests/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "KitLoong\\AppLogger\\AppLoggerServiceProvider"
+            ]
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
